# scientist-rust-sdk

./: Cargo.toml
src/: lib.rs  main.rs
src/client/: mod.rs
src/response/: mod.rs
