[package]
name = "scientist-api-sdk"
version = "0.1.0"
authors = ["Xavier Lange <xrlange@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.11", features = ["full"] }
futures = "0.3.4"
reqwest = { version = "0.10.1", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

[profile.release]
panic = "abort"
lto = true
codegen-units = 1